--- a/f3_usb_demo/Makefile
+++ b/f3_usb_demo/Makefile
@@ -39,7 +39,7 @@ DEPS:=$(OBJ:.o=.d)
 TARGET_DEPS:=$(TARGET_OBJ:.o=.d)
 USER_DEPS:=$(USER_OBJ:.o=.d)
 
-COMPORT=/dev/ttyACM2
+LOOPBACK_COMPORT=/dev/ttyACM2
 
 all: build size
 build: elf srec bin 
@@ -59,11 +59,11 @@ bmp: all
 bmp_looptest: bmp
 	echo "Loaded firmware, please unplug and plug in the USER USB cable NOW"
 	sleep 7
-	./test_loopback.py -p $(COMPORT) -n 4096
+	./test_loopback.py -p $(LOOPBACK_COMPORT) -n 4096
 stlink_looptest: load
 	echo "Loaded firmware, please unplug and plug in the USER USB cable NOW"
 	sleep 7
-	./test_loopback.py -p $(COMPORT) -n 4096
+	./test_loopback.py -p $(LOOPBACK_COMPORT) -n 4096
 
 clean:
 	$(RM) $(TARGET_OBJ) $(TARGET).srec $(TARGET).elf $(TARGET).bin $(TARGET).map $(USER_ASM_OBJ) $(USER_OBJ) $(USER_DEPS) $(TARGET_DEPS)
